# agent47

./: .gitignore  .pyre_configuration  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
data/dummy_repo/: buggy_script.py  test_script.py
src/: app.py  config.py  graph.py  state.py
src/agent47/: main.py  state.py
src/agent47/agents/: graph.py  handler.py  operative.py
src/agent47/config/: config.py  database.py  redis.py
src/agent47/domain/: __init__.py
src/agent47/domain/auth/: router.py  service.py  session.py
src/agent47/git/: service.py
src/agent47/sandbox/: docker_client.py  tools.py
src/agent47/utils/: crypto.py  track_push.py
src/agents/: graph.py  handler.py  operative.py
src/config/: config.py  database.py
src/domain/auth/: __init__.py  router.py  service.py  session.py
src/domain/contract/: model.py  router.py  service.py
src/domain/contracts/: __init__.py  models.py  router.py  service.py
src/domain/repositories/: __init__.py  models.py  router.py  service.py
src/domain/repository/: model.py  router.py  service.py
src/domain/user/: __init__.py  model.py  service.py
src/domain/webhook/: parser.py  router.py
src/domain/webhooks/: __init__.py  parser.py  router.py
src/domain/websocket/: router.py
src/git/: __init__.py  service.py
src/infra/middleware/: response_interceptor.py
src/infra/queue/: __init__.py
src/infra/websocket/: manager.py
src/sandbox/: docker_client.py  tools.py
src/tools/: __init__.py
src/utils/: crypto.py  track_push.py
tests/: test_sandbox.py
(+18 files in other folders)
