[tool.poetry]
name = "agent47"
version = "0.1.0"
description = "Agent 47: A lethal multi-agent system for autonomous bug fixing and code refactoring in isolated environments."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.13"
langgraph = "^0.0.31"
langchain-google-genai = "^1.0.1"
docker = "^7.0.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
